# django-app-template

./: LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
mydjangoapp/: apps.py
tests/: test_hello_django.py
tests/helper/djangoproject/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
