[metadata]
name = mydjangoapp
version=0.1.0
author = Ivan Georgiev
description = My Django App
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ivangeorgiev/{{ repository-name }}
license = Creative Commons
license_file = LICENSE
classifier =
  Development Status :: 3 - Alpha
  Framework :: Django
  Framework :: Django :: 3.1
  Framework :: Django :: 3.2
  Framework :: Django :: 4.0
  Framework :: Django :: 4.1
  Intended Audience :: Developers
  License :: OSI Approved :: Creative Commons
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Framework :: Django
  Framework :: Django :: 4.0
  Framework :: Django :: 4.1
keywords =
  authentication
  django
  rest framework

[options]
packages = mydjangoapp
requires_python = 3.8
install_requires = 
    Django>=3.2.0

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-django
develop =
    black
    django-debug-toolbar
    django-extensions
docs =
    sphinx

[tool:pytest]
pythonpath =.
addopts =
    --tb=short
    -rs
    ; --cov=<app-package>
    --ds=tests.helper.djangoproject.settings
python_files = 
   test_*.py
testpaths =
    tests
